# Computer_Graphics_Snippet

./: README.md
01_MagicalRaccon/: A1.html  A1.js  README.md  README.txt  a1.aux
01_MagicalRaccon/glsl/: racoon.fs.glsl  racoon.vs.glsl  remote.fs.glsl  remote.vs.glsl
02_MovingOctopus/: A2.html  A2.js  A2IK.html  A2IK.js  Readme.md  Readme.txt
02_MovingOctopus/glsl/: octopus.fs.glsl  octopus.vs.glsl
02_MovingOctopus/js/: SourceLoader.js
03_ShinningBalls/: A3.html  A3.js  Readme.md  Readme.txt
03_ShinningBalls/glsl/: blinnPhong.fs.glsl  blinnPhong.vs.glsl  gouraud.vs.glsl  phong.fs.glsl  texture.fs.glsl  texture.vs.glsl  toon.fs.glsl
04_Raytracing/: CMakeLists.txt  Readme.md  Readme.txt  imageBlinn.ppm  imageBlinn2.ppm  imageCube.ppm  imageDirectionalLight+shadow.ppm  imagePart1.ppm  imagePointLight+shadow.ppm
04_Raytracing/src/InOneWeekend/: hittable_list.h  main.cc  material.h  triangle.h
